[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Levels.gd" type="Script" id=1]
[ext_resource path="res://sprites/exit_up.png" type="Texture" id=2]
[ext_resource path="res://sprites/exit_down.png" type="Texture" id=3]
[ext_resource path="res://sprites/background.png" type="Texture" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
texture = ExtResource( 4 )
expand = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.0
margin_top = -22.0
margin_right = 29.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 29, 22 )
scroll_vertical_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 58.0
margin_bottom = 116.0
script = ExtResource( 1 )

[node name="Level 1" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_right = 58.0
margin_bottom = 20.0
text = "Level 1"

[node name="Level 2" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 58.0
margin_bottom = 44.0
text = "Level 2"

[node name="Level 3" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 58.0
margin_bottom = 68.0
text = "Level 3"

[node name="Level 4" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 58.0
margin_bottom = 92.0
text = "Level 4"

[node name="Level 5" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 58.0
margin_bottom = 116.0
text = "Level 5"

[node name="Exit" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -82.0
margin_top = -66.0
margin_right = 82.0
rect_min_size = Vector2( 164, 66 )
rect_pivot_offset = Vector2( 82, 33 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
expand = true

[connection signal="pressed" from="ScrollContainer/VBoxContainer/Level 1" to="ScrollContainer/VBoxContainer" method="_on_Level_1_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Level 2" to="ScrollContainer/VBoxContainer" method="_on_Level_2_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Level 3" to="ScrollContainer/VBoxContainer" method="_on_Level_3_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Level 4" to="ScrollContainer/VBoxContainer" method="_on_Level_4_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Level 5" to="ScrollContainer/VBoxContainer" method="_on_Level_5_pressed"]
[connection signal="pressed" from="Exit" to="ScrollContainer/VBoxContainer" method="_on_Exit_pressed"]
